<resources>
    <string name="app_name">MembersOfParliamentProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="partyDisplay">Party: %s</string>
    <string name="name">Name: %1s %2s</string>
    <string name="HetekaId">HetekaId: %d</string>
    <string name="seatNumber">Seat Number: %d</string>
    <string name="minister">Minister: %b</string>
    <string name="url">https://avoindata.eduskunta.fi/%s</string>
    <string name="twitter">Twitter: %s</string>
    <string name="bornYear">Born Year: %s</string>
    <string name="constituency">Constituency: %s</string>
    <string name="notAvailable">Not Available</string>
    <string name="comment"><b>Comment: </b>\n %s</string>
    <string name="likeOrDislike">Like Or Dislike: \n %s</string>
    <string name="add_comment">Add Comment</string>
    <string name="please_write_comment_here">Please write comment here.</string>
    <string name="like_or_dislike">Like Or Dislike</string>
    <string name="like_dislike">Like/Dislike</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
</resources>