<?xml version="1.0" encoding="utf-8"?>
<!--This fragment is for displaying and storing comments and like for parliament members -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentComment">

    <!--EditText is used for writing and storing the comment in database-->
    <EditText
        android:id="@+id/addComment"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:ems="10"
        android:hint="@string/please_write_comment_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComment"
        app:layout_constraintVertical_bias="0.037" />

    <!--CardView is used to divide the layout to different sections -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTop"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/FinnishBlue"
        app:cardBackgroundColor="@color/FinnishBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dislike"
        app:layout_constraintVertical_bias="0.609" />

    <!--Button is used for submitting the written comment in editText-->
    <Button
        android:id="@+id/addCommentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_comment"
        android:backgroundTint="@color/FinnishBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addComment"
        app:layout_constraintVertical_bias="0.058" />

    <!--TextView is used for displaying the like status of members-->
    <TextView
        android:id="@+id/textViewLike"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:text="@string/like_or_dislike"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCommentBtn"
        app:layout_constraintVertical_bias="0.297" />

    <!--Button is used for submitting like for the members-->
    <Button
        android:id="@+id/like"
        android:layout_width="101dp"
        android:layout_height="47dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/FinnishBlue"
        android:text="@string/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLike"
        app:layout_constraintVertical_bias="0.6" />

    <!--TextView is used for displaying the given comments to the members-->
    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="403dp"
        android:layout_height="100dp"
        android:text="@string/comment"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <!--Button is used for submitting dislike for the members-->
    <Button
        android:id="@+id/dislike"
        android:layout_width="101dp"
        android:layout_height="47dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/FinnishBlue"
        android:text="@string/dislike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/textViewLike"
        app:layout_constraintVertical_bias="0.218" />

    <!--CardView is used to divide the layout to different sections -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBottom"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/FinnishBlue"
        app:cardBackgroundColor="@color/FinnishBlue"
        app:layout_constraintBottom_toTopOf="@+id/textViewLike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCommentBtn"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>